# cardiac-proto-segmentation

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00_data_exploration.ipynb  01_baseline_analysis.ipynb  05_proto_seg_training.ipynb  14_proto_quality_metrics.ipynb  15_posthoc_analysis_v1.ipynb  16_multiscale_ablation_training_m2.ipynb  17_ablation_comparison.ipynb  20_attention_training.ipynb  20_attention_training_noent.ipynb  21_attention_analysis.ipynb  21b_attention_analysis_noent.ipynb  23_attn_weighted_loss.ipynb  24_attn_weighted_loss_analysis.ipynb  25_progressive_pruning.ipynb  26_progressive_pruning_analysis.ipynb  27_two_stage_warmstart.ipynb  28_warmstart_analysis.ipynb  29_warmstart_l3l4.ipynb  30_fixed_stage1.ipynb  31_ablation_level_selection.ipynb  32_m4_diagnostic.ipynb  34_m2_alc.ipynb  34b_m2_alc_l3only.ipynb  35_proto_v2_training.ipynb  36_late_fusion_attn.ipynb  37_xai_stage29.ipynb  38_g1b_stage29_projection.ipynb  39_g3_patch_faithfulness.ipynb  40_g4_stage34b_xai.ipynb  41_g5_stage8a_xai.ipynb  42_g7_baseline_unet_ap.ipynb  43_g11_gradient_attribution.ipynb  43_v10_figures.ipynb  44_g13_spatial_misalignment.ipynb  44_v10_visual_figures.ipynb  46_v11_counterfactual_gt_guided.ipynb
plan/: execution-plan-v4.md  execution-plan-v5.md  execution-plan-v6.md  execution-plan-v7.md  execution-plan-v8.md  execution-plan-v9.md
report/: gemini-research.md  report-v1.md
results/: ablation_table.csv  eval_3d_ct.txt  eval_3d_mr.txt  eval_xai_ct.txt  eval_xai_mr.txt  train_curve_proto_ct.csv  train_curve_proto_ct_abl_c.csv  xai_eval_ct_l2.txt  (+17 more)
(+218 files in other folders)
